xdoc: fix 3.6.2 memif interconnected trex and FD.io VPP example
Since the Trex 2.92 has been upgraded to use DPDK version 21.02.
See link:
https://stackoverflow.com/questions/67295590/use-trex-test-vpp-performance-memif-cant-connnect

Tested with trex 2.99 and vpp v22.10-release

Signed-off-by: Gabriel Ganne <gganne@accedian.com>

--- a/doc/trex_book.asciidoc
+++ b/doc/trex_book.asciidoc
@@ -676,8 +676,8 @@ To connect trex with two VPP memif interfaces:
 ----
   - port_limit: 2
     version: 2
-    interfaces: ["--vdev=net_memif0,socket=/run/vpp/memif.sock,role=slave,id=0",
-                 "--vdev=net_memif1,socket=/run/vpp/memif.sock,role=slave,id=1"]
+    interfaces: ["--vdev=net_memif0,role=slave,id=0,socket-abstract=no,socket=/run/vpp/memif.sock",
+                 "--vdev=net_memif1,role=slave,id=1,socket-abstract=no,socket=/run/vpp/memif.sock"]
 ----
 
 VPP CLI commands to create corresponding interfaces:
