--- a/doc/release_notes.asciidoc
+++ b/doc/release_notes.asciidoc
@@ -26,6 +26,9 @@ ifdef::backend-docbook[]
 
 endif::backend-docbook[]
 
+== Release 3.02 ==
+* minor change, build issue with 3.01 for mlx5 driver 
+
 == Release 3.01 ==
 
 * DPDK 
