--- a/doc/trex_book_basic.asciidoc
+++ b/doc/trex_book_basic.asciidoc
@@ -37,7 +37,7 @@ The following is an example YAML-format traffic configuration file (cap2/dns_tes
 <1> Range of clients (IPv4 format). 
 <2> Range of servers (IPv4 format).  
 <3> pcap file, which includes the DNS cap file that will be used as a template. 
-<4> Number of connections per second to generate. In the example, 1.0 means 1 connection per secod.
+<4> Number of connections per second to generate. In the example, 1.0 means 1 connection per second.
 <5> Inter-packet gap (microseconds). 10,000 = 10 msec.
 <6> Should be the same as ipg.
 
@@ -505,7 +505,7 @@ pkt,time sec,fid,flow-pkt-id,client_ip,client_port,server_ip ,desc
 |=================
 
 In this case there is only one client so only ports are used to distinc the flows
-you need to be sure that you have enogth free sockets when running TRex in high rates
+you need to be sure that you have enough free sockets when running TRex in high rates
  
 [source,python]
 ----
@@ -878,7 +878,7 @@ The traffic was recorded from a Spirent C100 with a Pagent that introduce 10msec
        w   : 1
 ----
 <1> Plugin for SIP protocol, used to replace the IP/port in the control flow base on the data-flow. 
-//TBD: I'm placing your note into a TBD - (what are plugins should have a seperate chapter)
+//TBD: I'm placing your note into a TBD - (what are plugins should have a separate chapter)
 <2> Plugin for RTSP protocol used to replace the IP/port in the control flow base on the data-flow.
 
 
@@ -3272,7 +3272,7 @@ ICMP echo request packets from both sides
 | 2 | 
 Send ICMP requests from one side, and matching ICMP responses from other side.
 
-This is particulary usefull if your DUT drops traffic from outside, and you need to open pin hole to get the outside traffic in (for example when testing a firewall)
+This is particularly useful if your DUT drops traffic from outside, and you need to open pin hole to get the outside traffic in (for example when testing a firewall)
 
 | 3 | 
 Send ICMP request packets with a constant 0 sequence number from both sides.
@@ -3304,6 +3304,6 @@ The command output of the `t-rex` utility with latency stats enabled looks simil
 <5> Average latency (in microseconds) across **all** samples since startup.
 <6> Maximum latency (in microseconds) across **all** samples since startup.
 <7> Jitter calculated as per RC3550 Appendix-A.8.
-<8> Maximum latency within a sliding window of 500 milliseconds. There are few values shown per port according to terminal width. The odlest value is on the left and most recent value (latest 500msec sample) on the right. This can help in identifying spikes of high latency clearing after some time. Maximum latency (<6>) is the total maximum over the entire test duration. To best understand this, run TRex with the latency option (-l) and watch the results. 
+<8> Maximum latency within a sliding window of 500 milliseconds. There are few values shown per port according to terminal width. The oldest value is on the left and most recent value (latest 500msec sample) on the right. This can help in identifying spikes of high latency clearing after some time. Maximum latency (<6>) is the total maximum over the entire test duration. To best understand this, run TRex with the latency option (-l) and watch the results. 
  
 
